# todui

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml  test-installers.yml
src/: app.rs  input.rs  lib.rs  main.rs  ui.rs
src/app/: mod.rs  state.rs
src/core/: config.rs  error.rs  input.rs  mod.rs
src/todo/: mod.rs  model.rs
src/ui/: mod.rs  render.rs
src/ui/layouts/: main.rs  mod.rs
src/ui/widgets/: filter_tabs.rs  help.rs  input.rs  message.rs  mod.rs  status.rs  title.rs  todo_list.rs
