[package]
name = "todui"
version = "0.1.0"
authors = ["P. Thipayanate <pyyupsk@proton.me>"]
edition = "2021"
description = "A terminal-based todo list manager written in Rust"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pyyupsk/todui"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
directories = "5.0"
thiserror = "1.0"
